# KenshiLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  KenshiLib.vcxproj  KenshiLib.vcxproj.filters  README.md  To-do.md
Include/: Debug.h  Defines.h  Shlwapi.h
Include/core/: Functions.h
Include/kenshi/: Bounty.h  BountyManager.h  Building.h  CharMovement.h  Character.h  CharacterAnimal.h  CharacterHuman.h  CombatClass.h  CombatTechniqueData.h  Damages.h  Enums.h  Faction.h  FactionLeader.h  FactionRelations.h  GameData.h  GameDataManager.h  GameLauncher.h  GameSaveState.h  GameWorld.h  Gear.h  Globals.h  InstanceID.h  Inventory.h  Item.h  Kenshi.h  Logger.h  MedicalSystem.h  ModInfo.h  OptionsHolder.h  PhysicsActual.h  PhysicsCollection.h  Platoon.h  PlayerInterface.h  RaceData.h  ResourceLoader.h  RootObject.h  RootObjectBase.h  RootObjectFactory.h  SaveFileSystem.h  SaveManager.h  (+4 more)
Include/kenshi/Building/: Building.h  CraftingBuilding.h  FurnaceBuilding.h  ProductionBuilding.h  ResearchBuilding.h  StorageBuilding.h  UseableStuff.h
Include/kenshi/gui/: MainBarGUI.h  ProspectingWindow.h
Include/kenshi/util/: StringPair.h  TimeOfDay.h  UtilityT.h  YesNoMaybe.h  functions.h  hand.h  iVector2.h  lektor.h
Include/mygui/common/baselayout/: BaseLayout.h
Include/ogre/: OgreMath.h  OgrePlane.h  OgrePrerequisites.h
Source/: Debug.cpp
Source/core/: Functions.cpp  Functions_stubs.cpp
Source/kenshi/: Kenshi.cpp  functions.asm  globals.inc  symbols.asm
Source/kenshi/functions/: AABB2D.inc  AbstractMovementBase.inc  ActivePlatoon.inc  AnimalInventoryLayout.inc  AppearanceAnimal.inc  AppearanceBase.inc  AppearanceHuman.inc  AppearanceManager.inc  AppearanceManager_AppearanceData.inc  AppearanceManager_DataCategory.inc  AppearanceManager_DataRange.inc  AppearanceManager_DataRangePose.inc  AppearanceManager_DataRangeVector.inc  AppearanceManager_Gender.inc  Armour.inc  BackpackInventoryLayout.inc  Bounty.inc  BountyManager.inc  BuildInventoryLayout.inc  BuildModeWindow.inc  BuildModeWindow_BuildingCategory.inc  BuildModeWindow_BuildingGroup.inc  Building.inc  BuildingContainerInventoryLayout.inc  Building_ConstructionState.inc  Building_ConstructionState_BuildMaterial.inc  CameraClass.inc  CharBody.inc  CharMovement.inc  CharStats.inc  Character.inc  CharacterAnimal.inc  CharacterEditWindow.inc  CharacterHuman.inc  CharacterInventoryLayout.inc  CharacterStatsWindow.inc  CharacterStatsWindow_Stat.inc  CharacterStatsWindow_StatGroup.inc  Character_AttachedArrowManager.inc  Character_RagdollMsg.inc  (+301 more)
docs/: ABI_STL_BOOST_AUDIT.md
scripts/: fetch_deps.sh
